force-app/main/default/objects/Goals_Performance__c/Goals_Performance__c.object-meta.xml
<CustomObject>
    <label>Goals &amp; Performance</label>
    <nameField>
        <displayFormat>GP-{00000}</displayFormat>
        <label>Goals &amp; Performance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals &amp; Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>