force-app/main/default/objects/Goals_Performance__c/fields/Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Booking_Amount__c</fullName>
    <label>Booking Amount (Rollup)</label>
    <summarizedField>Credits_and_Booking__c.Amount_USD__c</summarizedField>
    <summaryFilterItems>
        <field>Credits_and_Booking__c.Type__c</field>
        <operation>equals</operation>
        <value>Booking</value>
    </summaryFilterItems>
    <summaryForeignKey>Credits_and_Booking__c.Goals_Performance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>