force-app/main/default/objects/Goals_Performance__c/fields/Brands__c.field-meta.xml
<CustomField>
    <fullName>Brands__c</fullName>
    <label>Brands</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brands</valueSetName>
    </valueSet>
</CustomField>