force-app/main/default/objects/Goals_Performance__c/fields/OEM_Goal__c.field-meta.xml
<CustomField>
    <fullName>OEM_Goal__c</fullName>
    <label>OEM Goal</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>