force-app/main/default/objects/Goals_Performance__c/fields/Partner_Org__c.field-meta.xml
<CustomField>
    <fullName>Partner_Org__c</fullName>
    <label>Partner Org</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner &amp; House Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Goals &amp; Performance</relationshipLabel>
    <relationshipName>Goals_Performance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>