force-app/main/default/objects/Goals_Performance__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pipeline</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>