force-app/main/default/objects/Goals_Performance__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continental Disc Products</fullName>
            </value>
            <value>
                <fullName>Groth BioGas Products</fullName>
            </value>
            <value>
                <fullName>Groth Industrial</fullName>
            </value>
            <value>
                <fullName>LaMOT Valve &amp; Arrestor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>