force-app/main/default/objects/Goals_Performance__c/fields/Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Rep_Code__c</fullName>
    <formula>Text(Partner_Org__r.Rep_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Code</label>
    <type>Text</type>
</CustomField>