force-app/main/default/objects/Goals_Performance__c/fields/Unique_Id_gen__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id_gen__c</fullName>
    <formula>Rep_Code__c + &quot;-&quot; + Text(Fiscal_Year__c) + &quot;-&quot; + Text(Fiscal_Month__c) + &quot;-&quot; +  Text(Brands__c)</formula>
    <label>Unique Id (GEN)</label>
    <type>Text</type>
</CustomField>