force-app/main/default/objects/Goals_Performance__c/listViews/CDC_Goals.listView-meta.xml
<ListView>
    <fullName>CDC_Goals</fullName>
    <columns>NAME</columns>
    <columns>Partner_Org__c</columns>
    <columns>Brands__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Fiscal_Month__c</columns>
    <columns>Goal__c</columns>
    <columns>Booking_Amount__c</columns>
    <columns>OEM_Goal__c</columns>
    <columns>Credit_Amount__c</columns>
    <columns>Variance__c</columns>
    <columns>Pipeline_Amount_Rollup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brands__c</field>
        <operation>equals</operation>
        <value>CDC,LaMOT</value>
    </filters>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </filters>
    <filters>
        <field>Partner_Org__c</field>
        <operation>contains</operation>
        <value>hax</value>
    </filters>
    <filters>
        <field>Fiscal_Month__c</field>
        <operation>equals</operation>
        <value>8</value>
    </filters>
    <label>CDC Goals</label>
</ListView>